# Vortex

./: .env  .gitignore  README.md  dev.bat  dev.ps1  dev_cli.ps1  logs_cli.ps1  pytest.ini  restart.bat  run.bat  run.ps1  run_cli.ps1  status_cli.ps1  stop.bat  stop_cli.ps1
c3_rnt2_ai/: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  restart.bat  start.bat  stop.bat
c3_rnt2_ai/config/: settings.yaml
c3_rnt2_ai/data/bench/: latest.txt
c3_rnt2_ai/docs/: 120b_like.md  WINDOWS_SELF_TRAIN_WSL.md  rtx4080.md
c3_rnt2_ai/scripts/: bench_continuous.py  bench_core.py  bench_generate.py  bench_tokenizer.py  distill_draft.py  run_daemon.py  smoke_api.py  smoke_end_to_end.ps1
c3_rnt2_ai/src/c3rnt2/: __init__.py  __main__.py  autopilot.py  bench.py  cli.py  config.py  doctor.py  hf_model.py  model_loader.py  prepare.py  server.py  tensorrt_backend.py
c3_rnt2_ai/src/c3rnt2/adapters/: registry.py  router.py
c3_rnt2_ai/src/c3rnt2/agent/: agent_loop.py  policies.py  runner.py  tools.py
c3_rnt2_ai/src/c3rnt2/continuous/: anchors.py  bootstrap.py  budgets.py  consolidate.py  dataset.py  formatting.py  knowledge_store.py  lora.py  promotion.py  registry.py  replay_buffer.py  trainer.py  types.py
c3_rnt2_ai/src/c3rnt2/episodes/: __init__.py  index.py
c3_rnt2_ai/src/c3rnt2/experts/: registry.py
c3_rnt2_ai/src/c3rnt2/learning_loop/: data_collector.py
c3_rnt2_ai/src/vortex/: __init__.py  __main__.py
c3_rnt2_ai/tests/: conftest.py  test_agent_security.py  test_agent_tools_allowlist.py  test_autopilot_gpu_lock_vram_gate.py  test_autopilot_pause_and_gating.py  test_autopilot_restart_after_patch.py  test_bad_decode.py  test_bad_decode_no_unbound.py  test_bench_baseline.py  test_bench_json_schema.py  test_bootstrap_dataset_roundtrip.py  test_bootstrap_guard.py  test_bootstrap_teacher_missing_transformers.py  test_cache_manager.py  test_dataset_builder.py  test_dataset_does_not_bump_seed_success.py  test_doctor.py  test_doctor_baseline_required_120b_like.py  test_doctor_peft_required_for_hf_experts.py  test_doctor_quant_active_120b_like.py  test_episode_schema_v2_roundtrip.py  test_expert_training.py  test_formatting.py  test_gpu_decompress_stats.py  test_gpu_decompress_triton.py  test_hf_adapters_routing.py  test_hf_experts_manifest.py  test_hf_model_adapter_autoload.py  test_hf_qlora_auto_tune.py  test_hf_qlora_dataset.py  test_hf_weighted_sampling.py  test_inference_stateful.py  test_interval_resolution.py  test_knowledge_store.py  test_knowledge_store_fts.py  test_knowledge_store_policy.py  test_kv_quant_int8.py  test_kv_quant_integration.py  test_kv_quant_runtime.py  test_lava_memory.py  (+41 more)
frontend/: App.tsx  (+10 more)
(+3649 files in other folders)
